name:                numerics
version:             0.2.0.0
synopsis:            Haskell numeric algorithms
description:         Numeric algorithms taken from various places
license:             BSD3
license-file:        LICENSE
author:              Bob Dalgleish
maintainer:          bobdalgleish@mac.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Factorization.Primes,
                       Factorization.Factors
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12,
                       data-ordlist >=0.4 && <0.5,
                       array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
Test-Suite test-factors
    type:              detailed-0.9
    test-module:       FactorTest
    build-depends:     base >= 4 && < 5, 
                       Cabal >= 1.9.2 && < 2,
                       data-ordlist >=0.4 && <0.5,
                       array >=0.5 && <0.6,
                       QuickCheck >= 2.12.6